--- a/package.json
+++ b/package.json
@@ -8,6 +8,33 @@
   },
   "workspaces": [
     "client/*",
-    "server/*"
-  ]
+    "server/*",
+    "example/*"
+  ],
+  "dependencies": {
+    "dotenv": "^8.1.0",
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@shelf/jest-mongodb": "^1.1.1",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-rewire": "^1.2.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-node-3merge": "^1.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-react-3merge": "^1.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
+    "rewire": "^4.0.1"
+  }
 }
