--- a/client/gatsby-theme-q3/package.json
+++ b/client/gatsby-theme-q3/package.json
@@ -1,4 +1,34 @@
 {
   "name": "gatsby-theme-q3",
-  "version": "1.0.0"
+  "version": "1.0.1",
+  "main": "index.js",
+  "license": "MIT",
+  "peerDependencies": {
+    "gatsby": "^2.6.0"
+  },
+  "dependencies": {
+    "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.4.3",
+    "@reach/router": "^1.2.1",
+    "babel-preset-gatsby": "^0.2.11",
+    "gatsby-image": "^2.2.19",
+    "gatsby-plugin-canonical-urls": "^2.1.7",
+    "gatsby-plugin-material-ui": "^2.1.6",
+    "gatsby-plugin-polyfill-io": "^1.1.0",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-remove-trailing-slashes": "^2.1.6",
+    "gatsby-plugin-sharp": "^2.2.22",
+    "gatsby-plugin-sitemap": "^2.2.12",
+    "gatsby-source-contentful": "^2.1.36",
+    "gatsby-transformer-sharp": "^2.2.14",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
+    "q3-ui": "^1.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-social-icons": "^4.1.0"
+  }
 }
