--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -7,56 +7,14 @@
   "license": "MIT",
   "scripts": {
     "storybook": "start-storybook",
-    "deploy-storybook": "storybook-to-ghpages",
-    "build": "babel src --out-dir dist --copy-files",
     "test": "jest --runInBand --json --outputFile=.storybook/jestResults.json",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --fix"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest"
-    },
-    "coverageReporters": [
-      "json-summary",
-      "text",
-      "lcov"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/dist/"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|git f|webp|svg)$": "<rootDir>/__mocks__/fileMock.js"
-    }
+    "deploy": "storybook-to-ghpages && yarn test"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
     "@storybook/addon-a11y": "^5.1.11",
     "@storybook/addon-jest": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.11",
     "@storybook/addon-viewport": "^5.1.11",
     "@storybook/storybook-deployer": "^2.8.1",
-    "@typescript-eslint/eslint-plugin": "1.x",
-    "@typescript-eslint/parser": "1.x",
-    "babel-eslint": "10.x",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "coveralls": "^3.0.6",
-    "eslint": "^6.2.2",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-config-react-3merge": "^1.0.2",
-    "eslint-plugin-flowtype": "3.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.x",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
     "react-test-renderer": "^16.9.0",
     "storybook-readme": "^5.0.8"
   },
@@ -64,16 +22,12 @@
     "@date-io/moment": "^1.3.9",
     "@material-ui/lab": "^4.0.0-alpha.26",
     "@material-ui/pickers": "^3.2.4",
-    "@reach/router": "^1.2.1",
     "@storybook/react": "^5.1.11",
     "@storybook/router": "^5.2.1",
     "@svgr/webpack": "^4.3.2",
     "@tinymce/tinymce-react": "^3.3.2",
     "classnames": "^2.2.6",
     "downshift": "^3.2.12",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "faker": "^4.1.0",
     "formik": "^1.5.8",
     "i18next": "^17.0.12",
     "lodash": "^4.17.15",
@@ -82,7 +36,6 @@
     "react": "^16.9.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-content-loader": "^4.2.2",
-    "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-i18next": "^10.12.2",
     "react-json-pretty": "^2.1.0",
@@ -96,6 +49,8 @@
   "peerDependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
-    "@material-ui/styles": "^4.4.3"
+    "@material-ui/styles": "^4.4.3",
+    "@reach/router": "^1.2.1",
+    "react-dom": "^16.9.0"
   }
 }
