--- a/examples/admin/package.json
+++ b/examples/admin/package.json
@@ -28,5 +28,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.17.0"
   }
 }
