--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
+    "@reach/router": "^1.2.1",
     "i18next": "^17.0.16",
     "q3-ui": "^1.0.0",
     "react": "^16.9.0",
