--- a/packages/gatsby-theme-q3/package.json
+++ b/packages/gatsby-theme-q3/package.json
@@ -14,8 +14,10 @@
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@reach/router": "^1.2.1",
     "babel-preset-gatsby": "^0.2.11",
+    "clean-css": "^4.2.1",
     "gatsby-image": "^2.2.19",
     "gatsby-plugin-canonical-urls": "^2.1.7",
+    "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-remove-trailing-slashes": "^2.1.6",
