--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -17,5 +17,6 @@
     "react": "^16.9.0",
     "react-i18next": "^10.12.5",
     "react-router-dom": "^5.0.1"
-  }
+  },
+  "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a"
 }
