--- a/packages/q3-ui-commons/package.json
+++ b/packages/q3-ui-commons/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "q3-ui-common-views",
-  "version": "1.0.2",
+  "name": "q3-ui-commons",
+  "version": "1.0.3",
   "description": "Common views",
   "main": "lib/index.js",
   "author": "Mike <mibberson@3merge.ca>",
@@ -25,5 +25,6 @@
   "devDependencies": {
     "@storybook/react": "^5.2.3",
     "react": "^16.10.2"
-  }
+  },
+  "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a"
 }
