--- a/packages/q3-ui-permissions/package.json
+++ b/packages/q3-ui-permissions/package.json
@@ -5,5 +5,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "js-cookie": "^2.2.1"
-  }
+  },
+  "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a"
 }
