--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -4,5 +4,6 @@
   "main": "lib/index.js",
   "dependencies": {
     "notistack": "^0.9.2"
-  }
+  },
+  "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a"
 }
