--- a/examples/admin/package.json
+++ b/examples/admin/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.5",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "js-cookie": "^2.2.1",
     "q3-admin": "^1.0.5",
+    "q3-ui": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
