--- a/packages/q3-ui-permissions/package.json
+++ b/packages/q3-ui-permissions/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.2",
   "main": "lib/index.js",
   "dependencies": {
-    "axios": "^0.19.0",
     "js-cookie": "^2.2.1"
+  },
+  "peerDependencies": {
+    "axios": "^0.19.0"
   },
   "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a"
 }
