--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.6",
   "main": "lib/index.js",
   "dependencies": {
+    "lodash": "^4.17.15",
+    "micromatch": "^4.0.2",
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
@@ -18,6 +20,5 @@
     "react": "^16.9.0",
     "react-i18next": "^10.12.5",
     "react-router-dom": "^5.0.1"
-  },
-  "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a"
+  }
 }
