--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "set NODE_ENV=production&& lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files",
+    "build": "set NODE_ENV=production&& lerna exec --no-bail --parallel -- babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files",
     "lint": "eslint . --ext .js --ext .jsx --ignore-pattern lib --ignore-pattern node_modules",
     "storybook": "set NODE_ENV=development&& start-storybook",
     "test": "jest --runInBand --json --outputFile=.storybook/jestResults.json",
-    "lerna-publish": "set NODE_ENV=production&&lerna publish && storybook-to-ghpages"
+    "deploy": "yarn build && lerna publish && storybook-to-ghpages"
   },
   "workspaces": [
     "packages/*",
