--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,17 @@
       "language": "typescriptreact",
       "autoFix": true
     }
-  ]
+  ],
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/.jest-cache": true,
+    "**/.jest-coverage": true,
+    "**/node_modules/": true,
+    "**/packages/*/lib": true,
+    "**/packages/*/node_modules/": true,
+  }
 }
