--- a/packages/q3-ui-permissions/package.json
+++ b/packages/q3-ui-permissions/package.json
@@ -3,9 +3,18 @@
   "version": "1.0.4",
   "main": "lib/index.js",
   "dependencies": {
-    "js-cookie": "^2.2.1"
+    "js-cookie": "^2.2.1",
+    "minimatch": "^3.0.4"
   },
   "peerDependencies": {
-    "axios": "^0.19.0"
+    "@reach/router": "^1.2.1",
+    "axios": "^0.19.0",
+    "q3-ui-forms": "^1.0.0",
+    "react": "^16.10.2"
+  },
+  "devDependencies": {
+    "jest-mock-axios": "^3.1.1",
+    "prop-types": "^15.7.2",
+    "q3-ui-test-utils": "^1.0.0"
   }
 }
