--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -2,8 +2,14 @@
   "name": "q3-ui-rest",
   "version": "1.0.5",
   "main": "lib/index.js",
-  "dependencies": {
-    "notistack": "^0.9.2"
+  "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a",
+  "devDependencies": {
+    "jest-mock-axios": "^3.1.1"
   },
-  "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a"
+  "peerDependencies": {
+    "axios": "^0.19.0",
+    "lodash": "^4.17.15",
+    "q3-ui-forms": "^1.0.0",
+    "react": "^16.10.2"
+  }
 }
