--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^5.2.1",
     "react-id-swiper": "^2.3.2",
     "react-json-pretty": "^2.1.0",
+    "react-lazy-load-image-component": "^1.3.2",
     "react-router-dom": "^5.0.1",
     "react-social-icons": "^4.1.0",
     "react-window": "^1.8.5",
