--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "^12.9.0"
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap --use-workspaces",
+    "bootstrap": "lerna bootstrap --use-workspaces --include-peer-dependencies",
     "build": "set NODE_ENV=production&& lerna exec --no-bail --parallel -- babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files",
     "lint": "eslint . --ext .js --ext .jsx --ignore-pattern lib --ignore-pattern node_modules",
     "storybook": "set NODE_ENV=development&& start-storybook",
@@ -24,9 +24,9 @@
     "@babel/node": "^7.5.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/preset-env": "^7.5.5",
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/styles": "^4.4.3",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.5.0",
     "@shelf/jest-mongodb": "^1.1.1",
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
@@ -50,17 +50,20 @@
     "lerna": "^3.16.4",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "react": "^16.9.0",
+    "react": "^16.10.2",
     "react-dom": "^16.9.0",
     "rewire": "^4.0.1"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "@storybook/addon-a11y": "^5.2.4",
     "@storybook/addon-jest": "^5.2.4",
     "@storybook/addon-viewport": "^5.2.4",
     "@storybook/react": "^5.2.4",
     "@storybook/storybook-deployer": "^2.8.1",
     "@svgr/webpack": "^4.3.3",
+    "axios": "^0.19.0",
+    "react-i18next": "^10.13.1",
     "storybook-readme": "^5.0.8"
   }
 }
