--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -4,11 +4,11 @@
   "main": "lib/index.js",
   "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a",
   "devDependencies": {
-    "jest-mock-axios": "^3.1.1"
+    "jest-mock-axios": "^3.1.1",
+    "lodash": "^4.17.15"
   },
   "peerDependencies": {
     "axios": "^0.19.0",
-    "lodash": "^4.17.15",
     "q3-ui-forms": "^1.0.0",
     "react": "^16.10.2"
   }
