--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
     "@reach/router": "^1.2.1",
+    "axios": "^0.19.0",
     "q3-ui": "^1.0.0",
     "q3-ui-commons": "^1.0.0",
     "q3-ui-permissions": "^1.0.2",
