--- a/examples/admin/package.json
+++ b/examples/admin/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.9.0",
     "react-i18next": "^10.13.1",
     "react-scripts": "3.1.2",
+    "webpack": "^4.41.2",
     "yup": "^0.27.0"
   },
   "scripts": {
