--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "Q3-Client",
   "version": "1.0.0",
   "private": true,
   "license": "MIT",
@@ -7,7 +8,7 @@
     "node": "^12.9.0"
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap --use-workspaces --include-peer-dependencies",
+    "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "set NODE_ENV=production&& lerna exec --no-bail --parallel -- babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files",
     "lint": "eslint . --ext .js --ext .jsx --ignore-pattern lib --ignore-pattern node_modules",
     "storybook": "set NODE_ENV=development&& start-storybook",
@@ -20,14 +21,9 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/preset-env": "^7.5.5",
-    "@material-ui/core": "^4.5.1",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/styles": "^4.5.0",
-    "@shelf/jest-mongodb": "^1.1.1",
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -47,14 +43,16 @@
     "eslint-plugin-module-resolver": "^0.15.0",
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^24.9.0",
-    "lerna": "^3.16.4",
+    "lerna": "^3.18.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.9.0",
     "rewire": "^4.0.1"
   },
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.5.0",
     "@reach/router": "^1.2.1",
     "@storybook/addon-a11y": "^5.2.4",
     "@storybook/addon-jest": "^5.2.4",
@@ -63,6 +61,9 @@
     "@storybook/storybook-deployer": "^2.8.1",
     "@svgr/webpack": "^4.3.3",
     "axios": "^0.19.0",
+    "babel-loader": "^8.0.0-beta.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-i18next": "^10.13.1",
     "storybook-readme": "^5.0.8"
   }
