--- a/packages/gatsby-theme-q3/package.json
+++ b/packages/gatsby-theme-q3/package.json
@@ -7,14 +7,16 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
+    "@reach/router": "^1.2.1",
     "gatsby": "^2.6.0",
-    "q3-ui": "^1.0.0"
+    "q3-ui": "^1.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "dependencies": {
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@contentful/rich-text-types": "^13.4.0",
-    "@reach/router": "^1.2.1",
     "babel-preset-gatsby": "^0.2.11",
     "clean-css": "^4.2.1",
     "gatsby-image": "^2.2.19",
@@ -30,8 +32,6 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "q3-ui-commons": "^1.0.6",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
   }
 }
