--- a/packages/gatsby-theme-q3/package.json
+++ b/packages/gatsby-theme-q3/package.json
@@ -21,7 +21,9 @@
     "clean-css": "^4.2.1",
     "gatsby-image": "^2.2.19",
     "gatsby-plugin-canonical-urls": "^2.1.7",
+    "gatsby-plugin-manifest": "^2.2.23",
     "gatsby-plugin-material-ui": "^2.1.6",
+    "gatsby-plugin-offline": "^3.0.16",
     "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-remove-trailing-slashes": "^2.1.6",
