--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -15,13 +15,15 @@
     "i18next": "^17.0.12",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
+    "material-ui-dropzone": "^2.4.5",
     "minimatch": "^3.0.4",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react-content-loader": "^4.2.2",
+    "react-dropzone": "^10.1.10",
     "react-helmet": "^5.2.1",
     "react-id-swiper": "^2.3.2",
-    "react-json-pretty": "^2.1.0",
+    "react-json-pretty": "^2.2.0",
     "react-lazy-load-image-component": "^1.3.2",
     "react-router-dom": "^5.0.1",
     "react-social-icons": "^4.1.0",
