--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -11,7 +11,7 @@
     "@tinymce/tinymce-react": "^3.3.2",
     "classnames": "^2.2.6",
     "downshift": "^3.2.12",
-    "formik": "^1.5.8",
+    "formik": "2.0.3",
     "i18next": "^17.0.12",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
