--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -19,6 +19,7 @@
     "minimatch": "^3.0.4",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.8.3",
     "react-content-loader": "^4.2.2",
     "react-dropzone": "^10.1.10",
     "react-helmet": "^5.2.1",
