--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/core": "^7.5.5",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.31",
     "@material-ui/styles": "^4.5.0",
     "@reach/router": "^1.2.1",
     "@storybook/addon-a11y": "^5.2.4",
