--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -11,5 +11,8 @@
     "axios": "^0.19.0",
     "q3-ui-forms": "^1.0.0",
     "react": "^16.10.2"
+  },
+  "dependencies": {
+    "js-file-download": "^0.4.8"
   }
 }
