--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,8 +24,7 @@
     "**/.DS_Store": true,
     "**/.jest-cache": true,
     "**/.jest-coverage": true,
-    "**/node_modules/": true,
-    "**/packages/*/lib": true,
-    "**/packages/*/node_modules/": true,
+    //  "**/node_modules/": true,
+    "**/packages/*/lib": true
   }
 }
