--- a/examples/www/package.json
+++ b/examples/www/package.json
@@ -2,7 +2,7 @@
   "name": "www",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.0.25",
+  "version": "0.0.26",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@material-ui/core": "^4.4.3",
@@ -16,10 +16,10 @@
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sharp": "^2.2.25",
     "gatsby-source-filesystem": "^2.1.26",
-    "gatsby-theme-q3": "^0.0.25",
+    "gatsby-theme-q3": "^0.0.26",
     "gatsby-transformer-sharp": "^2.2.16",
     "prop-types": "^15.7.2",
-    "q3-ui": "^0.0.25",
+    "q3-ui": "^0.0.26",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "prettier": "^1.18.2",
-    "q3-ui-script": "0.0.25"
+    "q3-ui-script": "^0.0.26"
   },
   "keywords": [
     "gatsby"
