--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,8 @@ workflows:
     jobs:
       - build
       - publish:
+          requires:
+              - build
           filters:
             branches:
               only: master
