--- a/lerna.json
+++ b/lerna.json
@@ -5,5 +5,11 @@
     "packages/*",
     "examples/*"
   ],
-  "version": "0.0.27"
+  "version": "0.0.27",
+  "command": {
+    "publish": {
+      "conventionalCommits": true,
+      "yes": true
+    }
+  }
 }
