--- a/examples/www/package.json
+++ b/examples/www/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "www",
+  "name": "q3-www-example",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.0.27",
