--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.0-beta.1",
     "formik": "^2.0.4",
+    "i18next": "^19.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-i18next": "^10.13.1",
