--- a/packages/q3-ui-commons/package.json
+++ b/packages/q3-ui-commons/package.json
@@ -9,7 +9,8 @@
     "lodash": "^4.17.15",
     "q3-axios-mock": "^0.1.0",
     "react-recaptcha": "^2.3.10",
-    "react-recaptcha-google": "^1.1.1"
+    "react-recaptcha-google": "^1.1.1",
+    "scriptjs": "^2.5.9"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.4.3",
