--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": "^12.9.0"
   },
   "scripts": {
+    "prepare": "install-peers",
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "set NODE_ENV=publish&& lerna exec \"babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files\"",
     "lint": "eslint . --ext .js --ext .jsx --ignore-pattern lib --ignore-pattern node_modules",
@@ -43,6 +44,7 @@
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-module-resolver": "^0.15.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "install-peers-cli": "^2.1.1",
     "jest": "^24.9.0",
     "lerna": "^3.18.1",
     "nodemon": "^1.19.1",
