--- a/packages/gatsby-theme-q3/package.json
+++ b/packages/gatsby-theme-q3/package.json
@@ -6,12 +6,23 @@
   "peerDependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/lab": "^4.0.0-alpha.31",
     "@material-ui/styles": "^4.4.3",
     "@reach/router": "^1.2.1",
+    "axios": "^0.19.0",
+    "formik": "^2.0.3",
     "gatsby": "^2.6.0",
-    "q3-ui": "^1.0.0",
+    "i18next": "^17.0.12",
+    "q3-ui": "^0.2.0",
+    "q3-ui-commons": "^0.2.0",
+    "q3-ui-forms": "^0.2.0",
+    "q3-ui-permissions": "^0.2.0",
+    "q3-ui-rest": "^0.2.0",
+    "q3-test-utils": "^0.2.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-i18next": "^10.12.2",
+    "yup": "^0.27.0"
   },
   "dependencies": {
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
@@ -33,7 +44,6 @@
     "gatsby-transformer-sharp": "^2.2.14",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "q3-ui-commons": "^0.2.0",
     "react-helmet": "^5.2.1"
   }
 }
