--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "node": "^12.9.0"
   },
   "scripts": {
-    "prepare": "install-peers",
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "set NODE_ENV=publish&& lerna exec \"babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files\"",
     "lint": "eslint . --ext .js --ext .jsx --ignore-pattern lib --ignore-pattern node_modules",
@@ -30,7 +29,6 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-rewire": "^1.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.4.0",
@@ -44,12 +42,10 @@
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-module-resolver": "^0.15.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "install-peers-cli": "^2.1.1",
     "jest": "^24.9.0",
     "lerna": "^3.18.1",
     "nodemon": "^1.19.1",
-    "prettier": "^1.18.2",
-    "rewire": "^4.0.1"
+    "prettier": "^1.18.2"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
