--- a/packages/gatsby-theme-q3/package.json
+++ b/packages/gatsby-theme-q3/package.json
@@ -3,32 +3,20 @@
   "version": "0.2.4",
   "main": "index.js",
   "license": "MIT",
-  "peerDependencies": {
+  "peerDependencies": {},
+  "dependencies": {
+    "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@contentful/rich-text-types": "^13.4.0",
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.31",
     "@material-ui/styles": "^4.4.3",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
-    "formik": "^2.0.3",
-    "i18next": "^17.0.12",
-    "q3-test-utils": "^0.2.0",
-    "q3-ui": "^0.2.0",
-    "q3-ui-commons": "^0.2.0",
-    "q3-ui-forms": "^0.2.0",
-    "q3-ui-permissions": "^0.2.0",
-    "q3-ui-rest": "^0.2.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^10.12.2",
-    "yup": "^0.27.0"
-  },
-  "dependencies": {
-    "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
-    "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@contentful/rich-text-types": "^13.4.0",
     "babel-preset-gatsby": "^0.2.11",
     "clean-css": "^4.2.1",
+    "formik": "^2.0.3",
     "gatsby": "^2.18.0",
     "gatsby-image": "^2.2.19",
     "gatsby-plugin-canonical-urls": "^2.1.7",
@@ -42,8 +30,18 @@
     "gatsby-plugin-sitemap": "^2.2.12",
     "gatsby-source-contentful": "^2.1.36",
     "gatsby-transformer-sharp": "^2.2.14",
+    "i18next": "^17.0.12",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react-helmet": "^5.2.1"
+    "q3-ui": "^0.2.0",
+    "q3-ui-commons": "^0.2.0",
+    "q3-ui-forms": "^0.2.0",
+    "q3-ui-permissions": "^0.2.0",
+    "q3-ui-rest": "^0.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-i18next": "^10.12.2",
+    "yup": "^0.27.0"
   }
 }
