--- a/examples/q3-www-example/package.json
+++ b/examples/q3-www-example/package.json
@@ -1,13 +1,11 @@
 {
   "name": "q3-www-example",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.2.7",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/styles": "^4.4.3",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.5.0",
     "dotenv": "^8.1.0",
     "gatsby": "^2.15.20",
     "gatsby-image": "^2.2.20",
@@ -20,8 +18,12 @@
     "gatsby-transformer-sharp": "^2.2.16",
     "prop-types": "^15.7.2",
     "q3-ui": "^0.2.4",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "q3-ui-commons": "^0.2.4",
+    "q3-ui-forms": "^0.2.4",
+    "q3-ui-permissions": "^0.2.4",
+    "q3-ui-rest": "^0.2.4",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "react-i18next": "^10.13.1"
   },
@@ -33,16 +35,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "peer-deps": "yarn run q3-peers",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "serve": "gatsby serve"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
