--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -10,13 +10,14 @@
   "peerDependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/lab": "^4.0.0-alpha.31",
     "@material-ui/styles": "^4.4.3",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
-    "q3-ui": "^1.0.0",
-    "q3-ui-commons": "^1.0.0",
-    "q3-ui-permissions": "^1.0.2",
-    "q3-ui-rest": "^1.0.4",
+    "q3-ui": "^0.2.4",
+    "q3-ui-commons": "^0.2.4",
+    "q3-ui-permissions": "^0.2.4",
+    "q3-ui-rest": "^0.2.4",
     "react": "^16.9.0",
     "react-i18next": "^10.12.5",
     "react-router-dom": "^5.0.1"
