--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,11 @@
 {
   "editor.tabSize": 2,
   "editor.fontSize": 16,
-  "editor.detectIndentation": false,
-  "eslint.autoFixOnSave": true,
-  "eslint.alwaysShowStatus": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
     {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
+      "language": "html",
       "autoFix": true
     }
   ],
