--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "micromatch": "^4.0.2",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "yup": "^0.27.0"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.4.3",
