--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -8,6 +8,7 @@
     "@date-io/moment": "^1.3.9",
     "@material-ui/pickers": "^3.2.4",
     "@tinymce/tinymce-react": "^3.3.2",
+    "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
     "downshift": "^3.2.12",
     "is-glob": "^4.0.1",
@@ -20,6 +21,7 @@
     "react-content-loader": "^4.2.2",
     "react-dropzone": "^10.1.10",
     "react-helmet": "^5.2.1",
+    "react-highlight-words": "^0.16.0",
     "react-id-swiper": "^2.3.2",
     "react-json-pretty": "^2.2.0",
     "react-lazy-load-image-component": "^1.3.2",
