--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -13,6 +13,7 @@
     "downshift": "^3.2.12",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
+    "material-ui-chip-input": "^1.1.0",
     "material-ui-dropzone": "^2.4.5",
     "minimatch": "^3.0.4",
     "moment": "^2.24.0",
