--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -31,6 +31,8 @@
     "react-window": "^1.8.5",
     "swiper": "^5.0.4",
     "url-loader": "^2.1.0",
+    "useful-state": "^1.2.0",
+    "with-location": "^1.1.0",
     "yup": "^0.27.0"
   },
   "peerDependencies": {
