--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -9,6 +9,7 @@
     "@material-ui/pickers": "^3.2.4",
     "@tinymce/tinymce-react": "^3.3.2",
     "autosuggest-highlight": "^3.1.1",
+    "class-names": "^1.0.0",
     "classnames": "^2.2.6",
     "downshift": "^3.2.12",
     "is-glob": "^4.0.1",
