--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -2,6 +2,9 @@
   "name": "q3-ui-forms",
   "version": "0.6.2",
   "main": "lib/index.js",
+  "devDependencies": {
+    "q3-ui-test-utils": "0.6.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
