--- a/examples/q3-admin-example/package.json
+++ b/examples/q3-admin-example/package.json
@@ -7,8 +7,8 @@
     "axios": "^0.19.0",
     "js-cookie": "^2.2.1",
     "q3-admin": "^0.6.0",
-    "q3-axios-mock": "^0.6.0",
     "q3-ui": "^0.6.2",
+    "q3-ui-permissions": "0.6.0",
     "q3-ui-rest": "^0.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -36,6 +36,6 @@
     ]
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.17.0"
+    "q3-ui-test-utils": "0.6.0"
   }
 }
