--- a/packages/gatsby-theme-q3/package.json
+++ b/packages/gatsby-theme-q3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-theme-q3",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
@@ -45,6 +45,6 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "q3-ui-test-utils": "0.6.0"
+    "q3-ui-test-utils": "^0.6.3"
   }
 }
