--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -1,9 +1,9 @@
 {
   "name": "q3-ui-forms",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "main": "lib/index.js",
   "devDependencies": {
-    "q3-ui-test-utils": "0.6.0"
+    "q3-ui-test-utils": "^0.6.3"
   },
   "dependencies": {
     "@material-ui/core": "^4.5.1",
