--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "set NODE_ENV=publish&& lerna exec \"babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files\"",
     "lint": "eslint . --ext .js --ext .jsx --ignore-pattern lib --ignore-pattern node_modules",
-    "test": "jest --runInBand --collectCoverage --json --outputFile=.storybook/jestResults.json",
+    "test": "jest --runInBand --collectCoverage",
     "storybook": "set NODE_ENV=development&& start-storybook",
     "upload": "yarn build && lerna publish",
     "docs": "storybook-to-ghpages"
