--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -1,9 +1,9 @@
 {
   "name": "q3-ui-forms",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "main": "lib/index.js",
   "devDependencies": {
-    "q3-ui-test-utils": "^0.8.0"
+    "q3-ui-test-utils": "^0.8.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.5.1",
@@ -19,7 +19,7 @@
     "material-ui-chip-input": "^1.1.0",
     "minimatch": "^3.0.4",
     "notistack": "^0.9.5",
-    "q3-ui-dialog": "0.8.0",
+    "q3-ui-dialog": "^0.8.1",
     "react-i18next": "^10.13.1",
     "react-json-pretty": "^2.2.0",
     "react-recaptcha-google": "^1.1.1",
