--- a/packages/q3-ui-permissions/package.json
+++ b/packages/q3-ui-permissions/package.json
@@ -4,7 +4,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "js-cookie": "^2.2.1",
-    "minimatch": "^3.0.4"
+    "minimatch": "^3.0.4",
+    "prop-types": "^15.7.2"
   },
   "peerDependencies": {
     "@reach/router": "^1.2.1",
@@ -13,7 +14,7 @@
     "react": "^16.10.2"
   },
   "devDependencies": {
-    "jest-mock-axios": "^3.1.2",
+    "jest-mock-axios": "^3.2.0",
     "prop-types": "^15.7.2",
     "q3-ui-test-utils": "^1.1.3"
   }
