--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -4,7 +4,7 @@
   "main": "lib/index.js",
   "gitHead": "a88ebfcc87d52502d1c8fc865b0d371549d3ab1a",
   "devDependencies": {
-    "jest-mock-axios": "^3.1.2",
+    "jest-mock-axios": "^3.2.0",
     "q3-ui-test-utils": "^1.1.3"
   },
   "peerDependencies": {
@@ -14,6 +14,7 @@
     "react": "^16.10.2"
   },
   "dependencies": {
-    "js-file-download": "^0.4.8"
+    "js-file-download": "^0.4.8",
+    "react-dom": "^16.12.0"
   }
 }
