fix: Page and List components both share same state (Closes #49)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "workspaces": [
     "packages/*",
-    "examples/*"
+    "example/admin"
   ],
   "devDependencies": {
     "@babel/cli": "^7.5.5",
