--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -11,6 +11,7 @@
     "autosuggest-highlight": "^3.1.1",
     "class-names": "^1.0.0",
     "classnames": "^2.2.6",
+    "decode-html": "^2.0.0",
     "downshift": "^3.2.12",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
