--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/node": "^7.5.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/preset-env": "^7.5.5",
+    "@mdx-js/loader": "^1.5.5",
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -60,11 +61,11 @@
     "@material-ui/lab": "^4.0.0-alpha.31",
     "@material-ui/styles": "^4.5.0",
     "@reach/router": "^1.2.1",
-    "@storybook/addon-a11y": "^5.2.4",
-    "@storybook/addon-docs": "^5.2.5",
-    "@storybook/addon-info": "^5.2.5",
-    "@storybook/addon-viewport": "^5.2.4",
-    "@storybook/react": "^5.2.4",
+    "@storybook/addon-a11y": "^5.3.8",
+    "@storybook/addon-docs": "^5.3.8",
+    "@storybook/addon-info": "^5.3.8",
+    "@storybook/addon-viewport": "^5.3.8",
+    "@storybook/react": "^5.3.8",
     "@storybook/storybook-deployer": "^2.8.1",
     "@svgr/webpack": "^4.3.3",
     "axios": "^0.19.0",
