--- a/example/admin/package.json
+++ b/example/admin/package.json
@@ -12,7 +12,7 @@
     "q3-ui-rest": "^1.9.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-i18next": "^10.13.1",
+    "react-i18next": "11.3.1",
     "react-scripts": "3.1.2",
     "webpack": "^4.41.2",
     "yup": "^0.27.0"
