--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
-    "react-i18next": "^10.13.1",
+    "react-i18next": "11.3.1",
     "storybook-readme": "^5.0.8",
     "useful-state": "^1.2.0",
     "with-location": "^1.1.0",
