--- a/packages/q3-ui-datatables/package.json
+++ b/packages/q3-ui-datatables/package.json
@@ -11,7 +11,7 @@
     "@material-ui/lab": "^4.0.0-alpha.31",
     "@reach/router": "^1.2.1",
     "lodash": "^4.17.15",
-    "react-i18next": "^10.13.1",
+    "react-i18next": "11.3.1",
     "useful-state": "^1.2.0",
     "with-location": "^1.1.0"
   },
