--- a/packages/q3-ui-filters/package.json
+++ b/packages/q3-ui-filters/package.json
@@ -10,8 +10,9 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.31",
     "@reach/router": "^1.2.1",
+    "formik": "^2.0.4",
     "lodash": "^4.17.15",
-    "react-i18next": "^10.13.1",
+    "react-i18next": "11.3.1",
     "with-location": "^1.1.0"
   },
   "peerDependencies": {
