--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -20,7 +20,7 @@
     "minimatch": "^3.0.4",
     "notistack": "^0.9.5",
     "q3-ui-dialog": "^1.9.6",
-    "react-i18next": "^10.13.1",
+    "react-i18next": "11.3.1",
     "react-json-pretty": "^2.2.0",
     "react-recaptcha-google": "^1.1.1",
     "react-window": "^1.8.5",
