fix: filter fields

--- a/packages/q3-ui-filters/package.json
+++ b/packages/q3-ui-filters/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q3-ui-filters",
-  "version": "1.9.6",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "devDependencies": {
     "q3-ui-test-utils": "^1.9.6"
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.31",
     "@reach/router": "^1.2.1",
+    "decode-uri-component": "^0.2.0",
     "formik": "^2.0.4",
     "lodash": "^4.17.15",
     "react-i18next": "11.3.1",
