fix: confict q3-locale already exists

--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -21,7 +21,7 @@
     "minimatch": "^3.0.4",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "q3-locale": "^1.9.28",
+    "q3-ui-locale": "^1.9.28",
     "query-string": "^6.8.3",
     "react-content-loader": "^4.2.2",
     "react-dropzone": "^10.1.10",
