--- a/packages/q3-ui-locale/package.json
+++ b/packages/q3-ui-locale/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "q3-locale",
+  "name": "q3-ui-locale",
   "version": "1.9.28",
   "main": "lib/index.js",
   "author": "Mike <mibberson@3merge.ca>",
