[CHORE] Merge WIP changes (#122)
* fix: resource card aspect ratio

* fix: collection gen

* feat: session storage on notifications

* fix: connect formik value to text field

* refactor: q3-ui-assets for material-integration SVGs

--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -21,7 +21,8 @@
     "minimatch": "^3.0.4",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "q3-ui-locale": "^1.11.2",
+    "q3-ui-assets": "^1.0.0",
+    "q3-ui-locale": "^1.9.29",
     "query-string": "^6.8.3",
     "react-content-loader": "^4.2.2",
     "react-dropzone": "^10.1.10",
