--- a/packages/q3-ui-repeater/package.json
+++ b/packages/q3-ui-repeater/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "q3-ui-dialog": "^1.12.4",
+    "q3-ui-exports": "^1.0.0",
     "q3-ui-forms": "^1.12.10",
     "react-i18next": "11.3.1",
     "useful-state": "^1.2.0"
