refactor: editable text field

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/node": "^7.5.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/preset-env": "^7.5.5",
+    "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.17",
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
@@ -63,7 +64,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.31",
     "@reach/router": "^1.2.1",
-    "@storybook/addon-a11y": "^5.3.8",
+    "@storybook/addon-a11y": "^5.3.18",
     "@storybook/addon-docs": "^5.3.8",
     "@storybook/addon-viewport": "^5.3.8",
     "@storybook/react": "^5.3.8",
