--- a/packages/q3-components/package.json
+++ b/packages/q3-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "q3-ui-forms-presets",
+  "name": "q3-components",
   "version": "1.15.1",
   "main": "lib/index.js",
   "devDependencies": {
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "class-names": "^1.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "q3-ui-forms": "^1.15.1",
     "react-i18next": "11.3.1",
     "useful-state": "^1.2.0",
@@ -24,5 +25,6 @@
     "formik": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.10.2"
-  }
+  },
+  "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
