--- a/packages/q3-ui-cart/package.json
+++ b/packages/q3-ui-cart/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.31",
     "class-names": "^1.0.0",
+    "q3-components": "*",
     "q3-ui-permissions": "^1.13.17",
     "react-i18next": "11.3.1",
     "useful-state": "^1.2.0"
@@ -18,5 +19,6 @@
     "@reach/router": "^1.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2"
-  }
+  },
+  "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
