--- a/packages/q3-ui-repeater/package.json
+++ b/packages/q3-ui-repeater/package.json
@@ -12,6 +12,7 @@
     "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
+    "q3-components": "*",
     "q3-ui-dialog": "^1.14.6",
     "q3-ui-exports": "^1.14.6",
     "q3-ui-forms": "^1.15.1",
@@ -21,5 +22,6 @@
   "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.10.2"
-  }
+  },
+  "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
