chore(gatsy-theme-q3): merged repositories

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy-storybook": "storybook-to-ghpages -- --out=.out"
   },
   "workspaces": [
+    "e2e-tests",
+    "gatsby-theme-q3",
     "packages/*"
   ],
   "resolutions": {
