--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "resolutions": {
     "acorn": "^7.1.1",
-    "kind-of": "^6.0.3"
+    "kind-of": "^6.0.3",
+    "moment": "2.24.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -31,61 +32,62 @@
     "@storybook/addon-knobs": "^5.3.17",
     "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.1.0",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-jest": "^25.5.1",
+    "babel-plugin-module-resolver": "^4.0.0",
     "dotenv": "^8.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-node-3merge": "^1.0.1",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-react-3merge": "^1.0.1",
     "eslint-import-resolver-babel-module": "^5.1.0",
     "eslint-import-resolver-lerna": "^1.1.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-module-resolver": "^0.15.0",
+    "eslint-plugin-module-resolver": "^0.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.19.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.1.0",
-    "jest-localstorage-mock": "^2.4.0",
-    "jest-mock-axios": "^3.2.0",
+    "jest": "^25.5.4",
+    "jest-localstorage-mock": "^2.4.2",
+    "jest-mock-axios": "^4.0.0",
     "lerna": "^3.18.1",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
-    "yarn-deduplicate": "^1.1.1",
-    "yarn-workspace-sync-deps": "^0.2.1"
+    "xlsx": "^0.16.0",
+    "yarn-deduplicate": "^2.0.0",
+    "yarn-workspace-sync-deps": "^0.3.2"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.31",
+    "@material-ui/lab": "^4.0.0-alpha.51",
     "@reach/router": "^1.2.1",
     "@storybook/addon-a11y": "^5.3.18",
     "@storybook/addon-docs": "^5.3.8",
     "@storybook/addon-viewport": "^5.3.8",
     "@storybook/react": "^5.3.8",
     "@storybook/storybook-deployer": "^2.8.1",
-    "@svgr/webpack": "^4.3.3",
+    "@svgr/webpack": "^5.4.0",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.0-beta.1",
     "comparisons": "^2.2.5",
     "dot-helpers": "^1.1.2",
     "formik": "^2.0.4",
-    "i18next": "^19.0.1",
+    "i18next": "^19.4.4",
     "js-file-download": "^0.4.8",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "moment": "2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1",
-    "react-i18next": "11.3.1",
+    "react-helmet": "^6.0.0",
+    "react-i18next": "11.4.0",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.6",
-    "yup": "^0.27.0"
+    "yup": "^0.28.5"
   }
 }
