--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -10,7 +10,7 @@
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
     "minimatch": "^3.0.4",
-    "moment": "^2.24.0"
+    "moment": "2.24.0"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
