--- a/packages/q3-ui-locale/package.json
+++ b/packages/q3-ui-locale/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "peerDependencies": {
     "i18next": "^17.0.12",
-    "moment": "^2.24.0",
+    "moment": "2.24.0",
     "react-i18next": "^11.3.1",
     "yup": "^0.27.0"
   },
