--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -5,44 +5,37 @@
   "author": "Mike <mibberson@3merge.ca>",
   "license": "MIT",
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.0",
-    "@date-io/moment": "^1.3.9",
+    "@date-io/moment": "1.3.13",
     "@material-ui/pickers": "^3.2.4",
     "@tinymce/tinymce-react": "^3.3.2",
-    "autosuggest-highlight": "^3.1.1",
     "class-names": "^1.0.0",
     "classnames": "^2.2.6",
-    "decode-html": "^2.0.0",
-    "downshift": "^3.2.12",
     "gatsby-image": "^2.3.1",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
     "material-ui-chip-input": "^1.1.0",
-    "material-ui-dropzone": "^2.4.5",
+    "material-ui-dropzone": "^3.0.0",
     "minimatch": "^3.0.4",
-    "moment": "^2.24.0",
+    "moment": "2.24.0",
     "prop-types": "^15.7.2",
     "q3-ui-assets": "^1.15.5",
     "q3-ui-locale": "^1.15.5",
-    "query-string": "^6.8.3",
     "react-content-loader": "^4.2.2",
     "react-credit-cards": "^0.8.0",
-    "react-dropzone": "^10.1.10",
+    "react-dropzone": "^11.0.1",
     "react-google-maps": "^9.4.5",
-    "react-helmet": "^5.2.1",
-    "react-highlight-words": "^0.16.0",
-    "react-id-swiper": "^2.3.2",
+    "react-helmet": "^6.0.0",
+    "react-id-swiper": "^3.0.0",
     "react-joyride": "^2.2.1",
     "react-json-pretty": "^2.2.0",
     "react-lazy-load-image-component": "^1.3.2",
     "react-social-icons": "^4.1.0",
-    "react-visibility-sensor": "^5.1.1",
     "react-window": "^1.8.5",
-    "swiper": "^5.0.4",
-    "url-loader": "^2.1.0",
+    "swiper": "^5.3.8",
+    "url-loader": "^4.1.0",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.6",
-    "yup": "^0.27.0"
+    "yup": "^0.28.5"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.4.3",
