--- a/packages/q3-ui-exports/package.json
+++ b/packages/q3-ui-exports/package.json
@@ -9,11 +9,13 @@
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
+    "alphabetize-object-keys": "^3.0.0",
+    "exceljs": "^3.9.0",
+    "file-saver": "^2.0.2",
     "flat": "^5.0.0",
     "lodash": "^4.17.15",
-    "react-data-export": "^0.6.0",
+    "micromatch": "^4.0.2",
     "react-i18next": "11.4.0",
-    "react-json-to-csv": "^1.0.4",
     "useful-state": "^1.2.0"
   },
   "peerDependencies": {
