--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "gatsby-theme-q3",
     "packages/*"
   ],
+  "resolutions": {
+    "lodash": "4.17.19"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/node": "^7.10.4",
+    "@babel/cli": "^7.10.5",
+    "@babel/node": "^7.10.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
     "@babel/plugin-transform-modules-commonjs": "^7.9.6",
     "@babel/preset-env": "^7.10.0",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
-    "axios-mock-adapter": "^1.17.0",
+    "axios-mock-adapter": "^1.18.2",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -38,7 +41,7 @@
     "dotenv": "^8.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^7.4.0",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-node-3merge": "^1.1.1",
     "eslint-config-prettier": "^6.11.0",
@@ -49,22 +52,22 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-mdx": "^1.7.0",
+    "eslint-plugin-mdx": "^1.7.1",
     "eslint-plugin-module-resolver": "^0.17.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
-    "jest-localstorage-mock": "^2.4.2",
+    "jest-localstorage-mock": "^2.4.3",
     "jest-mock-axios": "^4.2.0",
     "lerna": "^3.22.1",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
-    "yarn-deduplicate": "^2.1.0",
+    "yarn-deduplicate": "^2.1.1",
     "yarn-workspace-sync-deps": "^0.3.2"
   },
   "dependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@contentful/rich-text-react-renderer": "^14.1.1",
@@ -104,27 +107,27 @@
     "file-saver": "^2.0.2",
     "flat": "^5.0.0",
     "formik": "^2.0.4",
-    "gatsby": "^2.22.11",
+    "gatsby": "^2.24.7",
     "gatsby-image": "^2.4.13",
-    "gatsby-link": "^2.4.12",
+    "gatsby-link": "^2.4.13",
     "gatsby-plugin-canonical-urls": "^2.3.10",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
-    "gatsby-plugin-manifest": "^2.4.18",
+    "gatsby-plugin-manifest": "^2.4.19",
     "gatsby-plugin-material-ui": "^2.1.9",
     "gatsby-plugin-netlify": "^2.3.11",
-    "gatsby-plugin-offline": "^3.2.17",
+    "gatsby-plugin-offline": "^3.2.19",
     "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-remove-trailing-slashes": "^2.3.11",
     "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-plugin-sharp": "^2.6.20",
     "gatsby-plugin-sitemap": "^2.4.11",
-    "gatsby-react-router-scroll": "^3.0.11",
-    "gatsby-source-contentful": "^2.3.26",
-    "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-react-router-scroll": "^3.0.12",
+    "gatsby-source-contentful": "^2.3.28",
+    "gatsby-source-filesystem": "^2.3.20",
     "gatsby-theme-q3": "^1.19.10",
     "gatsby-transformer-sharp": "^2.5.11",
-    "i18next": "^19.6.0",
+    "i18next": "^19.6.2",
     "is-glob": "^4.0.1",
     "js-cookie": "^2.2.1",
     "js-file-download": "^0.4.12",
@@ -146,7 +149,7 @@
     "react-credit-cards": "^0.8.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
-    "react-dropzone": "^11.0.1",
+    "react-dropzone": "^11.0.2",
     "react-email-editor": "^1.0.0",
     "react-filter-box": "^3.3.0",
     "react-google-maps": "^9.4.5",
@@ -167,7 +170,7 @@
     "simplebar-react": "^2.2.1",
     "slugify": "^1.4.4",
     "socket.io-client": "^2.3.0",
-    "swiper": "^6.0.2",
+    "swiper": "^6.0.4",
     "throttle-debounce": "^2.2.1",
     "url-loader": "^4.1.0",
     "useful-state": "^1.2.0",
