fix: debounced useResult hook

--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -11,7 +11,8 @@
     "is-glob": "^4.0.1",
     "lodash": "^4.17.19",
     "minimatch": "^3.0.4",
-    "moment": "2.27.0"
+    "moment": "2.27.0",
+    "use-debounce": "^3.4.3"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
