chore: wip file uploading stories

--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -33,6 +33,7 @@
     "q3-ui": "^0.2.4",
     "q3-ui-datatables": "^1.0.0",
     "q3-ui-dialog": "0.8.0",
+    "q3-ui-filemanager": "^1.19.34",
     "q3-ui-filters": "1.0.0",
     "q3-ui-forms": "0.6.2",
     "q3-ui-helpers": "^1.0.0",
