--- a/package.json
+++ b/package.json
@@ -129,7 +129,9 @@
     "minimatch": "^3.0.4",
     "mock-socket": "^9.0.3",
     "moment": "2.27.0",
+    "moment-timezone": "^0.5.31",
     "notistack": "^1.0.0",
+    "qs": "^6.9.4",
     "query-string": "^6.13.1",
     "react": "^16.10.2",
     "react-butterfiles": "^1.3.3",
