--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -22,8 +22,10 @@
     "material-ui-chip-input": "^1.1.0",
     "minimatch": "^3.0.4",
     "moment": "2.27.0",
+    "moment-timezone": "^0.5.31",
     "notistack": "^1.0.0",
     "q3-ui-dialog": "^1.24.2",
+    "qs": "^6.9.4",
     "react-dropzone": "^11.0.3",
     "react-i18next": "11.7.2",
     "react-json-pretty": "^2.2.0",
