feat: server side events and react charting library (#285)
* chore(wip): converting sockets to sse

* chore: remove socket instance

* chore(wip): charts

* chore(wip): stories and fixtures for charts

* chore: integrate with q3-ui-charts

* test: unsaved changes

* test: fix useRefresh

* refactor: date picker hoc

* style: charts css

* test: admin chart integration

* test: remaining chart unit tests

* test: integration testing charts

* docs: q3-ui-charts api notes

* docs: added charts to root

* fix: unit test failure due to timezones

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "postinstall": "yarnw-sync-deps && yarn-deduplicate",
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "set NODE_ENV=publish&& lerna exec \"babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js --copy-files\"",
+    "build": "set NODE_ENV=publish&& lerna exec \"babel --root-mode upward src -d lib --ignore **/*.stories.js,**/*.spec.js,**/*.stories.mdx,**/*.test.js --copy-files --delete-dir-on-start\"",
     "storybook": "set NODE_ENV=development&& start-storybook",
     "upload": "yarn build && lerna publish",
     "deploy": "yarn build && build-storybook --docs",
@@ -132,7 +132,6 @@
     "material-ui-chip-input": "^1.1.0",
     "micromatch": "^4.0.2",
     "minimatch": "^3.0.4",
-    "mock-socket": "^9.0.3",
     "moment": "2.29.1",
     "moment-timezone": "^0.5.32",
     "notistack": "^1.0.2",
@@ -158,7 +157,6 @@
     "scriptjs": "^2.5.9",
     "simplebar-react": "^2.3.0",
     "slugify": "^1.4.6",
-    "socket.io-client": "^3.0.3",
     "swiper": "^6.3.5",
     "url-loader": "^4.1.1",
     "useful-state": "^1.2.0",
