--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -14,13 +14,12 @@
     "formik": "^2.2.5",
     "lodash": "^4.17.20",
     "micromatch": "^4.0.2",
-    "mock-socket": "^9.0.3",
     "moment": "2.29.1",
     "notistack": "^1.0.2",
     "prop-types": "^15.7.2",
+    "q3-ui-charts": "^1.0.0",
     "react-butterfiles": "^1.3.3",
     "react-helmet": "^6.1.0",
-    "socket.io-client": "^3.0.3",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.6",
     "yup": "^0.31.1"
